# mcp-datadog

./: .codecov.yml  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.md
.github/workflows/: ci.yml
src/: cache.rs  error.rs  lib.rs  main.rs  utils.rs
src/datadog/: client.rs  mod.rs  models.rs  retry.rs
src/handlers/: common.rs  dashboards.rs  events.rs  hosts.rs  logs.rs  logs_aggregate.rs  logs_timeseries.rs  metrics.rs  mod.rs  monitors.rs  rum.rs  services.rs  spans.rs
src/server/: mod.rs  protocol.rs  router.rs  schema.rs
tests/: test_metrics_deserialization.rs  test_optimized_response.rs
tests/common/: builders.rs  fixtures.rs  mocks.rs  mod.rs
tests/fixtures/: error_responses.json  logs.json  metrics.json
